syntax = "proto3";

package artist;

option go_package = ".;artist";

import "google/protobuf/timestamp.proto";

service ArtistService{
  rpc CreateArtist(CreateArtistRequest) returns (CreateArtistResponse);
  rpc GetArtist(GetArtistRequest) returns (GetArtistResponse);
  rpc GetAllArtists(GetArtistsRequest) returns (GetArtistsResponse);
  rpc UpdateArtist(UpdateArtistRequest) returns (UpdateArtistResponse);
  rpc DeleteArtist(DeleteArtistRequest) returns (DeleteArtistResponse);
  rpc LikeArtist(LikeArtistRequest) returns (LikeArtistResponse);
  rpc GetArtistLikesCount(GetLikesCountRequest) returns (GetLikesCountResponse);
}

message Artist {
  string ID = 1;
  string FirstName = 2;
  string LastName = 3;
  string Image=4;
  string Email=5;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}

message CreateArtistRequest{
  Artist artist = 1;
}
message CreateArtistResponse{
  string id = 1;
}
message GetArtistRequest{
  string id = 1;
}
message GetArtistResponse{
  Artist artist = 1;
}
message GetArtistsRequest{
  int64 Page=1;
  int64 maxPerPage=2;
  string sort=3;
  string sortKey=4;
}
message GetArtistsResponse{
  PaginatedArtistData artists=1;
}
message UpdateArtistRequest{
  Artist artist = 1;
}
message UpdateArtistResponse{}

message DeleteArtistRequest{
  string id = 1;
}
message DeleteArtistResponse{}

message LikeArtistRequest{
  string user_id = 1;
  string artist_id = 2;
}
message LikeArtistResponse{
  bool is_liked=1;
}

message GetLikesCountRequest{
  string artist_id = 1;
}
message GetLikesCountResponse{
  int64 count=1;
}

message PaginatedArtistData{
  MetaData MetaData=1;
  repeated Artist Data=2;
}
message MetaData  {
  int64  Page  =1;
  int64  PerPage =2;
  int64       PageCount=3;
  int64    TotalCount=4;
  repeated  Link Links =5;
}
message Link{
  string key = 1;
  string value = 2;
}




